# adaptiveRAG

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  next_phase_enhancements.md  pyproject.toml
.github/workflows/: ci.yaml  deploy.yaml  eval.yaml
config/: ablation.yaml  default.yaml
data/chroma_eval/: _corpus_summary.txt  chroma.sqlite3
data/eval/: qa_pairs.json
data/eval/corpus/: company_overview.md  incident_report_IR-2025-014.md  product_roadmap_2026.md  q3_2025_financial_summary.md  vendor_msa_freightco_excerpt.md
data/sample/: Basel_Introduction.docx  Basel_Introduction.txt  sample.csv  sample.md  sample1.htm
eval_results/: baseline.json  baseline_pre_reranker.json
infra/: app.yaml  deploy.sh
src/adaptiverag/: __main__.py  config.py  llm_client.py  pipeline.py  scope.py
src/adaptiverag.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/adaptiverag/agents/: approval.py  audit.py  executor.py  memory.py  sandbox.py  supervisor.py  tools.py
src/adaptiverag/api/: auth.py  jobs.py  main.py  models.py  routes.py  store.py
src/adaptiverag/eval/: __init__.py  benchmark.py  compare.py  dataset.py  metrics.py  report.py  suite.py
src/adaptiverag/ingest/: __init__.py  chunker.py  embedder.py  exceptions.py  extractors.py  loader.py  models.py  pipeline.py  summarizer.py
src/adaptiverag/reason/: __init__.py  chain.py  grounding.py  router.py
src/adaptiverag/retrieve/: hybrid.py  query_expander.py  reranker.py  vector_store.py
src/adaptiverag/scripts/: test_grounding_live.py  test_rag_e2e.py  test_router_live.py
tests/: conftest.py  test_api.py  test_auth.py  test_benchmark.py  test_chunker.py  test_conversation_store.py  test_embedder.py  test_eval_dataset.py  test_eval_metrics.py  test_eval_suite.py  test_executor.py  test_grounding.py  test_hybrid.py  test_ingest_async.py  test_loader.py  test_memory.py  test_reasoning.py  test_retrieve_split.py  test_router.py  test_scoped_ingest.py  test_summarizer.py  test_supervisor.py  test_tools.py  test_vector_store.py
ui/: app.py  components.py
web/: index.html  package-lock.json  package.json  stub_server.py  vite.config.ts
web/src/: App.tsx  Landing.tsx  api.ts  icons.tsx  index.css  types.ts
web/src/chat/: ApprovalModal.tsx  ChatApp.tsx  InputBar.tsx  Messages.tsx  Sidebar.tsx  useChat.ts
