[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptiverag"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0",
    "pyyaml>=6.0", "bs4>=4.0", "pypdf>=6.9.0", "python-docx>=1.2.0", "numpy>=2.4.0"
]

[tool.setuptools.packages.find]
where = ["src"]